welcome.lessons.welcome.array.island.Island.scala.error
island:5: error: not found: value l
    if (l(i) >l(i-1)) {
        ^island:5: error: not found: value l
    if (l(i) >l(i-1)) {
              ^