welcome.lessons.welcome.array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var compteur:Int=0
  var lg:Int=num.length
  for (i<-1 to lg-1) {
    if (l(i) >l(i-1)) {
      compteur=compteur+1
    }
  }
  return compteur
}
  